2006-05-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	and Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES_PREPARE):
	Don't assume 'grep' works on long lines, since AIX grep doesn't.

2005-05-28  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE): Do not use `grep' on
	the output file in the `${datarootdir}' test.

2005-05-28  Stepan Kasal  <kasal@ucw.cz>
	and Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE): If we have not seen
	mention of `datarootdir' in the input file(s), but literal
	`${datarootdir}' in the output file, and we haven't warned yet,
	then warn as well: the user may have (erroneously) used
	`AC_SUBST([mydatadir], [$datadir/my])' instead of the correct
	`AC_SUBST([mydatadir], ['${datadir}/my'])'.
	* tests/torture.at (datarootdir workaround): Extend this test.
	* NEWS: Update.

2006-05-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	and Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (autoheader Invocation): The first argument to
	`AC_DEFINE_UNQUOTED' need not be a literal.  Mention the
	alternatives and clear up the language a bit.

2006-05-27  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Reword notice for AC_TRY_COMMAND, AC_TRY_EVAL,
	ac_config_guess, ac_config_sub, ac_configure.
	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS):
	Fix typo that prevented an unnecessary space from being removed.
	Problems reported by Ralf Wildenhues in:
	http://lists.gnu.org/archive/html/autoconf-patches/2006-05/msg00143.html

2006-05-26  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Particular Programs, Limitations of Usual Tools):
	Use better wording to talk about AC_PROG_MKDIR_P's thread-safety.
	Don't use the term "thread-safe" to talk about mkdir race
	conditions, since the problem is more a process than a thread
	issue.  Problem reported by Stepan Kasal in:
	http://lists.gnu.org/archive/html/autoconf-patches/2006-05/msg00088.html